--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -10,21 +10,24 @@
     <TextView
         android:id="@+id/textViewUser"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="480dp"
         android:layout_weight="1"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="#0B0000"
         android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/submit"
-        android:layout_width="380dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginRight="10dp"
-        android:text="Submit Order" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center|center_horizontal|center_vertical"
+        android:orientation="horizontal">
 
+
+        <Button
+            android:id="@+id/submit"
+            android:layout_width="380dp"
+            android:layout_height="50dp"
+            android:text="Submit Order" />
+    </LinearLayout>
 
 </LinearLayout>
